feat: client-dataportal 모듈 CircuitBreaker 적용 및 fallback 메서드 추가